[package]
name = "bar"
version = "0.1.0"
authors = ["Cole Reynolds <cpjreynolds@gmail.com>"]
description = "status bar"
license = "MIT"

[[bin]]
name = "bar"
path = "src/main.rs"

[lib]
name = "bar"
path = "src/bar/lib.rs"

[dependencies]
toml = "0.1"
rustc-serialize = "0.3"
libc = "0.2"
docopt = "0.6"
term = "0.2"

